# SurfaceHopping

./: .gitignore  LICENSE  README.md  USER_GUIDE.md  md_data  output_sh_dyn  populations  pyproject.toml  surface_hopping.py
docs/: 01-introduction.md  02-installation.md  03-theory.md  04-quickstart.md  05-models.md  06-api.md  07-wigner-sampling.md  08-decoherence.md  09-differentiable-workflows.md  10-performance.md  11-troubleshooting.md  README.md  get_potential.html  input_pes.html  wigner.html
docs/html/: index.html  molecular_dynamics.html
examples/: differentiability_demo.py  pyrazine_benchmark.py  pyrazine_decoherence.py  pyrazine_dynamics.py  tully1_benchmark.py
joss/: paper.bib  paper.md
notebooks/: differentiable_dynamics.ipynb
surface_hopping/: get_potential.py  input_pes.py  molecular_dynamics.py  wigner.py
surfacehop_jax/: __init__.py  constants.py  decoherence.py  dynamics.py  models.py  pes.py  wigner.py
test/: test_get_potential.py  test_molecualar_dynamics.py
tests/: conftest.py  test_decoherence.py  test_differentiability.py  test_dynamics.py  test_lvc.py  test_pes.py  test_tully1_benchmark.py  test_wigner.py
