[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surfacehop_jax"
version = "1.1.0"
description = "Differentiable fewest-switches surface hopping in JAX"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Prateek Goel" },
]
keywords = [
    "chemistry", "nonadiabatic dynamics", "surface hopping", "jax",
    "tully", "vibronic coupling", "photochemistry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov"]
dev = ["pytest>=7.0", "pytest-cov", "mypy", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["surfacehop_jax*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that take longer than a few seconds (run with: pytest -m slow)",
]
